# ProduitsMatriceVecteursMPI

./: .dockerignore  CMakeLists.txt  Dockerfile  install_mpi.bat  leaderFollower.txt  leader_follower.cpp  main.cpp  readme.md
.github/workflow/: test.yml
.github/workflows/: test.yml
classes/: MPI1_Impl.cpp  MPI1_Impl.h  MPI2_Impl.cpp  MPI2_Impl.hpp  MPITemplate.cpp  MPITemplate.h  Matrice.cpp  Matrice.h  Matrix.cpp  Matrix.h
classes/LeaderFollower/: LeaderFollowerJobSystem.cpp  LeaderFollowerJobSystem.hpp  LeaderFollowerMultMat.cpp  LeaderFollowerMultMat.hpp  LeaderFollowerTemplate.cpp  LeaderFollowerTemplate.hpp  MessagePayload.hpp
input/: m2
tests/: CMakeLists.txt  matrice_input_test  matrice_test.cpp  mpi_tests.cpp
